--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -1,34 +1,35 @@
+.para {
+  font-size: 22px;
+}
+
+.small-para {
+  font-size: 14px;
+}
+
 .para,
 .small-para {
   color: hsl(0, 100%, 50%);
 }
 
-.small-para {
-  font-size: 14px;
-}
-
-.para {
-  font-size: 22px;
-}
-
 .confirm {
-  background: green;
+  background-color: green;
   color: white;
+  font-size: 20px;
   font-weight: bold;
 } 
 
-.button {
+.button.cancel {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 20px;
 }
 
-.child {
-  color: red;
-  font-size: 14px;
-}
-
-div.text {
+.text {
   color: green;
   font-size: 22px;
+}
+
+.text.child {
+  color: red;
+  font-size: 14px;
 }
